--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="container">
 			<h1 class="page-header">Mod Status</h1>
                 <div class="maintance">
-                    <span class="status-icon"><i class="fa fa-cog"></i></span> 
-                    <strong><a href="https://thunderstore.io/package/Lodington/RoRCheats/">RoRCheats</a> : </strong> Updating.
+                    <span class="status-icon"><i class="fa fa-check"></i></span> 
+                    <strong><a href="https://thunderstore.io/package/Lodington/RoRCheats/">RoRCheats</a> : </strong> Updated, Character Selection Not Working.
                 </div>
                 <div class="maintance">
                     <span class="status-icon"><i class="fa fa-cog"></i></span> 
