--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
             <div class="container">
 			<h1 class="page-header">Mod Status</h1>
-                <div class="maintance">
+                <div class="online">
                     <span class="status-icon"><i class="fa fa-check"></i></span> 
                     <strong><a href="https://thunderstore.io/package/Lodington/RoRCheats/">RoRCheats</a> : </strong> Updated, Character Selection Not Working.
                 </div>
