--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 </div>
                 <div class="offline">
                     <span class="status-icon"><i class="fa fa-cog"></i></span> 
-                    <strong><a href="https://thunderstore.io/package/Lodington/LobbyManagement/">Lobby Management</a> : </strong> Broken.
+                    <strong><a href="https://thunderstore.io/package/Lodington/LobbyManagement/">Lobby Management</a> : </strong> Deprecated.
                 </div>
 
                 <div class="offline">
                     <span class="status-icon"><i class="fa fa-cog"></i></i></span> 
-                    <strong><a href="https://thunderstore.io/package/Lodington/Thiccify/">Thiccify</a> : </strong> Broken.
+                    <strong><a href="https://thunderstore.io/package/Lodington/Thiccify/">Thiccify</a> : </strong> Deprecated.
                 </div>
                 <h1 class="page-header">Mod Dependacy Status</h1>
                 <div class="online">
